--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -6,7 +6,11 @@
   <body>
   <h1>My Google Login Project</h1>
   {% if user.is_authenticated %}
+
+  <a href="{% url 'exgame:edit_profile'%}">{{user.username}} Edit Your Profile?</a>
   <p>Welcome, {{ user.username }} !</p>
+  
+  
  
   {% else %}
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
