--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -4,9 +4,9 @@
     <title>Google Registration</title>
   </head>
   <body>
-  <h1>My Google Login Project</h1>
+  <h1>Exercise Gamification</h1>
   {% if user.is_authenticated %}
-  <p>Welcome, {{ user.username }} !</p>
+  <p>Welcome, <a href="/profile"> {{ user.username }}</a></p>
  
   {% else %}
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
