Added a profile edit view and form

--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -6,7 +6,7 @@
   <body>
   <h1>Exercise Gamification</h1>
   {% if user.is_authenticated %}
-  <p>Welcome, <a href="/profile"> {{ user.username }}</a></p>
+  <p>Welcome <a href="/edit_profile"> {{ user.username }}</a></p>
  
   {% else %}
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
