Added base.html and made it to a close to ready state

--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -1,3 +1,6 @@
+{%extends 'base.html'%}
+
+{% block content %}
 {% load socialaccount %}
 <html>
   <head>
@@ -15,3 +18,4 @@
 
   </body>
 </html>
+{% endblock %}
