--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -8,6 +8,9 @@
   {% if user.is_authenticated %}
   <p>Welcome <a href="/edit_profile"> {{ user.username }}</a></p>
   <p> This is your email address {{user.email}}</p>
+  <p> Would you like to make a <a href="/forum_post"> post?</a></p>
+  <p> Input  <a href="/exercise"> exercises </a></p>
+  <p> View <a href="/progress"> progress</a></p>
  
   {% else %}
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
