--- a/eg/templates/base.html
+++ b/eg/templates/base.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load socialaccount %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -19,15 +20,37 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/profile">View Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/edit_profile">Edit Profile</a>
-      </li>
+
+        {% if user.is_authenticated%}
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/edit_profile">Edit Profile</a>
+          </li>
+        <li class = "nav-item">
+            <a class = "nav-link" href="accounts/logout"> Logout </a>
+        </li>
+        <li class = "nav-item">
+            <a class = "nav-link" href="admin"> Admin Login </a>
+        </li>
+        {%else%}
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+        <li class = "nav-item">
+            <a class = "nav-link" href="{% provider_login_url 'google' %}">Login with Google</a>
+        </li>
+          <li class = "nav-item">
+            <a class = "nav-link" href="accounts/login"> Login (Non-Google)</a>
+            </li>
+            <li class = "nav-item">
+                <a class = "nav-link" href="/register"> Register (Non-Google)</a>
+            </li>
+            <li class = "nav-item">
+                <a class = "nav-link" href="admin"> Admin Login </a>
+            </li>
+        {%endif%}
   </div>
 </nav>
 {%block content%}
