--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -1,4 +1,5 @@
 {%extends 'base.html'%}
+{% load static%}
 
 {% block content %}
 {% load socialaccount %}
@@ -8,9 +9,33 @@
   </head>
   <body>
   <h1>Exercise Gamification</h1>
+  <br></br>
+  <br></br>
   {% if user.is_authenticated %}
-  <p>Welcome <a href="/edit_profile"> {{ user.username }}</a></p>
-  <p> This is your email address {{user.email}}</p>
+  <h3>Welcome {{ user.first_name }}</h3>
+  <br></br>
+
+  <div class="card mb-3">
+    <div class = "row no-gutters">
+      <div class = "col-md-2">
+        {%if user.profile.profile_pic.url%}
+        <img class="card-img-top" src="{{user.profile.profile_pic.url}}" class = "rounded-circle" alt="Card image cap">
+        {% else %}
+        <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" class = "rounded-circle" alt="Card image cap">
+        {%endif%}
+        </div>
+        <div class= "col-md-10">
+          <div class="card-body">
+            <h5 class="card-title">{{user.username}}</h5>
+              <p class="card-text">{{user.profile.bio}}</p>
+              <p class="card-text"><small class = "text-muted"> Joined {{user.date_joined}}</small></p>
+              
+              <a href="#" class="btn btn-primary">Visit Profile</a> 
+              <!-- ^^^In the future this should take you to their public facing profile page -->
+              </div>
+              </div>
+    </div>
+  </div>
  
   {% else %}
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
