--- a/eg/templates/base.html
+++ b/eg/templates/base.html
@@ -29,10 +29,7 @@
             <a class="nav-link" href="/edit_profile">Edit Profile</a>
           </li>
         <li class = "nav-item">
-            <a class = "nav-link" href="accounts/logout"> Logout </a>
-        </li>
-        <li class = "nav-item">
-            <a class = "nav-link" href="admin"> Admin Login </a>
+            <a class = "nav-link" href="/accounts/logout"> Logout </a>
         </li>
         {%else%}
         <li class="nav-item active">
@@ -42,15 +39,15 @@
             <a class = "nav-link" href="{% provider_login_url 'google' %}">Login with Google</a>
         </li>
           <li class = "nav-item">
-            <a class = "nav-link" href="accounts/login"> Login (Non-Google)</a>
+            <a class = "nav-link" href="/accounts/login"> Login (Non-Google)</a>
             </li>
             <li class = "nav-item">
                 <a class = "nav-link" href="/register"> Register (Non-Google)</a>
             </li>
-            <li class = "nav-item">
-                <a class = "nav-link" href="admin"> Admin Login </a>
-            </li>
         {%endif%}
+        <li class = "nav-item">
+            <a class = "nav-link" href="/admin"> Admin Login </a>
+        </li>
   </div>
 </nav>
 {%block content%}
