--- a/eg/templates/forum.html
+++ b/eg/templates/forum.html
@@ -4,8 +4,18 @@
     {% if posts %}
     <ul>
         {% for post in posts %}
-        <li>Post by {{user.username}}: </li>
+        <li>Post {{post.post_number}}, Post by {{post.post_maker}}: </li>
         <p>{{post.post_text}}</p>
+        {% if not post.replies.all %}
+        <p>No replies yet</p>
+        {% else %}
+            {% for reply in post.replies.all %}
+        <DD><li>reply by {{reply.reply_maker}} : {{reply.reply_text}}</li></DD>
+            {% endfor %}
+        {% endif %}
+        <p>Likes: {{post.likes}}</p>
+        <p> Make a <a href="/make_reply/{{post.post_number}}"> reply</a></p>
+        <p><a href="/like/{{post.post_number}}"> like</a></p>
         {% endfor %}
     </ul>
 </blockquote>
