--- a/eg/templates/exercise.html
+++ b/eg/templates/exercise.html
@@ -1,8 +1,8 @@
 {% load bootstrap4 %}
 
-<form method="post" class="form">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {% bootstrap_form form %}
+    {{form}}
     {% buttons %}
     <input type="submit" class="btn btn-outline-success"></inputbutton>
     {% endbuttons %}
