--- a/eg/templates/progress.html
+++ b/eg/templates/progress.html
@@ -8,6 +8,7 @@
         <img src="{% static 'eg/images/blue-box.jpg' %}" width="{{progress}}" height="100">
         <p>{{user.username}}, you have made {{progress_percentage}} % progress towards the next level</p>
         <p>Your level is {{level}}</p>
+        <p><a href="/"> go back to the index page</a></p>
     </ul>
 </div>
 
