--- a/eg/templates/create_user_profile_page.html
+++ b/eg/templates/create_user_profile_page.html
@@ -15,8 +15,8 @@
         
         {{form.as_p}}
         <button class = "btn btn-secondary">Create Profile Page </button>
-
-        </div>
+        </form>
+    </div>
 
         </form>
 
