make things pretty pt 1

--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -52,6 +52,7 @@
 
  
   {% else %}
+  <link rel="stylesheet" type ="text/css" href="{% static 'style.css' %}" class = "center">
   <a href="{% provider_login_url 'google' %}">Login with Google</a>
   {% endif %}
 
