--- a/eg/templates/profile_input.html
+++ b/eg/templates/profile_input.html
@@ -1,5 +1,6 @@
 {% load bootstrap4 %}
-
+{% block content %}
+          
 <form method="post" class="form">
     {% csrf_token %}
     {% bootstrap_form form %}
@@ -7,3 +8,4 @@
     <input type="submit" class="btn btn-outline-success"></inputbutton>
     {% endbuttons %}
 </form>
+{% endblock content %}
