--- a/eg/templates/forum_post.html
+++ b/eg/templates/forum_post.html
@@ -1,5 +1,6 @@
 {% load bootstrap4 %}
-
+{% block content %}
+          
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{form}}
@@ -7,3 +8,4 @@
     <input type="submit" class="btn btn-outline-success"></inputbutton>
     {% endbuttons %}
 </form>
+{% endblock content %}
