--- a/eg/templates/edit_profile.html
+++ b/eg/templates/edit_profile.html
@@ -1,17 +1,15 @@
 {%extends 'base.html'%}
-{%block titile %} Edit Profile {% endblock %}
+{%block titile %} Edit Settings {% endblock %}
 {% block content %}
 
-<h1> Edit Profile...</h1>
+<h1> Edit User Settings...</h1>
 <br/><br>
-
-{{user.profile.bio}}
 
 <div class = "form-group">
     <form method = "POST">
         {% csrf_token %}
         {{ form.as_p}}
-        <button class = "btn btn-secondary"> Update Profile</button>
+        <button class = "btn btn-secondary"> Update Settings</button>
     
 </div>
 
