--- a/eg/templates/user_profile.html
+++ b/eg/templates/user_profile.html
@@ -17,9 +17,9 @@
         </div>
         <div class= "col-md-10">
           <div class="card-body">
-            <h5 class="card-title">{{page_user.username}}</h5>
+            <h5 class="card-title">{{user.username}}</h5>
               <p class="card-text">{{page_user.bio}}</p>
-              <p class="card-text"><small class = "text-muted"> Joined {{page_user.date_joined}}</small></p>
+              <p class="card-text"><small class = "text-muted"> Joined {{user.date_joined}}</small></p>
               
               <a href="{% url 'show_profile_page' user.profile.id %} " class="btn btn-primary">Visit Profile</a> 
               <!-- ^^^In the future this should take you to their public facing profile page -->
