--- a/eg/templates/our-music-choice.html
+++ b/eg/templates/our-music-choice.html
@@ -1,8 +1,8 @@
 {%extends 'base.html'%}
 {% block content %}
 
-<h1>Our Music Choice: A Boogie Wit da Hoodie</h1>>
-<strong>This is our artist of the week! Listen to these previews and get inspired!</strong>
+<h1 class="text-center">Our Music Choice: A Boogie Wit da Hoodie</h1>
+<h4 class="text-center">Listen to these hot artists and get inspired!</h4>
 
 {% if results %}
 <div class="container bg-dark p-2">
@@ -12,15 +12,14 @@
     <li class="media">
     <img src="{{song.album.images.0.url}}" class="rounded-circle" style="max-width:10%;" alt="">
       <div class="media-body">
-        <h4 class="text-black btn-success">{{song.name}}</h4>
+        <h5 class="bg-warning text-dark">{{song.name}}</h5>
         <div class="list-group-item"><a href='{{song.preview_url}}'><button type="button"
-            class="btn btn-success  mt-1">PLAY SONG</button></a></div>
+            class="btn btn-dark  mt-1">PLAY SONG</button></a></div>
       </div>
     </li>
   </ul>
 
-{% endfor%}
-
+{%endfor%}
 </div>
 {% endif %}
 
