--- a/eg/templates/exercise.html
+++ b/eg/templates/exercise.html
@@ -1,11 +1,23 @@
+{% extends 'base.html' %}
 {% load bootstrap4 %}
+
+{% block title %}<h1 class="text-center">What exercise did you do?</h1> {%endblock%}
 {% block content %}
-          
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form}}
-    {% buttons %}
-    <input type="submit" class="btn btn-outline-success"></inputbutton>
-    {% endbuttons %}
-</form>
+<div class="container">
+    <div class="row">
+        <div class="p-3 mb-2 bg-dark text-white text-center">"EACH NEW DAY IS A NEW OPPORTUNITY TO IMPROVE YOURSELF. TAKE IT. AND MAKE THE MOST OF IT."</div> 
+    </div>
+</div>
+<div class="form-group">
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <h5>{{form}}</h5>
+        {% buttons %}
+        <input type="submit" class="btn btn-outline-success"></inputbutton>
+        {% endbuttons %}
+    </form>
+</div>
+
+
+
 {% endblock content %}
