changes to profile and model

--- a/eg/templates/base.html
+++ b/eg/templates/base.html
@@ -35,7 +35,7 @@
               <a class="dropdown-item" href="/edit_settings">Edit Settings</a>
               {% if user.profile.id%}
               <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %} ">Edit Profile Page</a>
-              <a class="dropdown-item" href="{% url 'show_profile_page' user.profile.id %} ">Show Profile Page</a>
+              <a class="dropdown-item" href="{% url 'profile_view' user.id %} ">Show Profile Page</a>
               {%else%}
               <a class="dropdown-item" href="{% url 'create_profile_page'%} ">Create Profile</a>
 
