--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -47,8 +47,12 @@
     <div class="ui-bg-overlay bg-dark opacity-50"></div>
     <div class="container">
       <div class="text-center py-5">
+        <!-- {%if user.profile.profile_pic.url%} -->
+        <!-- <img class="card-img-top" src="{{request.user.profile.profile_pic.url}}" alt="" class="ui-w-100 rounded-circle"> -->
         <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="" class="ui-w-100 rounded-circle">
-
+        <!-- {%else%} -->
+        <!-- <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" class = "rounded-circle" alt="Card image cap"> -->
+        <!-- {%endif%} -->
         <div class="col-md-8 col-lg-6 col-xl-5 p-0 mx-auto">
           <h4 class="font-weight-bold my-4">Welcome, {{ user.first_name }}!</h4>
 
@@ -67,7 +71,7 @@
           <div class="card-body">
             {% if user.profile.id %}
               
-            <a href="{% url 'show_profile_page' user.profile.id %} " class="btn btn-primary"> Edit Profile</a> 
+            <a href="{% url 'profile_view' user.id %} " class="btn btn-primary"> View Profile</a> 
               
             {%else%}
             <a href="{% url 'create_profile_page'%} " class="btn btn-primary">Create Profile</a> 
