Made fixes for travis and the forum, added a return to index link in view profile

--- a/eg/templates/view_profile.html
+++ b/eg/templates/view_profile.html
@@ -58,7 +58,8 @@
         <p class="text-left"> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
         {% endif %}
         {% endfor %}
-        <p><a href="/forum/"> go back to forums</a></p>
+        <p><a href="/forum/"> go to forums</a></p>
+        <p><a href="/"> go to index</a></p>
     </ul>
 </blockquote>
 {% else %}
