--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -66,9 +66,9 @@
         {%if user.profile.profile_pic.url%}
           <img class="card-img-top" src="{{request.user.profile.profile_pic.url}}" alt="" class="ui-w-100 rounded-circle">
         <!-- <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="" class="ui-w-100 rounded-circle"> -->
-        <!-- {%else%} -->
-        <!-- <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" class = "rounded-circle" alt="Card image cap"> -->
-        <!-- {%endif%} -->
+        {%else%}
+        <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" class = "rounded-circle" alt="Card image cap">
+        {%endif%}
         <div class="col-md-8 col-lg-6 col-xl-5 p-0 mx-auto">
           <h4 class="font-weight-bold my-4">Welcome, {{ user.first_name }}!</h4>
 
