--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -64,10 +64,10 @@
     <div class="container">
       <div class="text-center py-5">
         {%if user.profile.profile_pic.url%}
-          <img class="card-img-top" src="{{request.user.profile.profile_pic.url}}" alt="" class="ui-w-100 rounded-circle">
+          <img class="card-img-top" src="{{request.user.profile.profile_pic.url}}" alt="" style="width:500px;height:600px;" class="ui-w-100 rounded-circle">
         <!-- <img src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="" class="ui-w-100 rounded-circle"> -->
         {%else%}
-        <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" class = "rounded-circle" alt="Card image cap">
+        <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" style="width:500px;height:600px;" class = "rounded-circle" alt="Card image cap">
         {%endif%}
         <div class="col-md-8 col-lg-6 col-xl-5 p-0 mx-auto">
           <h4 class="font-weight-bold my-4">Welcome, {{ user.first_name }}!</h4>
