Added different HTML file for viewing your own profile, added link to the progress page to make it easier to re-enter exercises, made it possible to view profile information of someone who made a reply.

--- a/eg/templates/index.html
+++ b/eg/templates/index.html
@@ -87,7 +87,7 @@
           <div class="card-body">
             {% if user.profile.id %}
               
-            <a href="{% url 'profile_view' user.id %} " class="btn btn-primary"> View Profile</a> 
+            <a href="{% url 'view_own_profile' %} " class="btn btn-primary"> View Profile</a>
               
             {%else%}
             <a href="{% url 'create_profile_page'%} " class="btn btn-primary">Create Profile</a> 
