--- a/eg/templates/progress.html
+++ b/eg/templates/progress.html
@@ -17,6 +17,7 @@
         {% if level > 2 %}
         <p> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
         {% endif %}
+        <p><a href="/exercise"> add another exercise?</a></p>
         <p><a href="/"> go back to the index page</a></p>
     </ul>
 </div>
