--- a/eg/templates/view_own_profile.html
+++ b/eg/templates/view_own_profile.html
@@ -38,16 +38,16 @@
 
         <p class="text-left">Progress:</p>
         <p class="text-left"><img src="{% static 'eg/images/blue-box.jpg' %}" width="{{progress}}" height="100"></p>
-        <p class="text-left"> User Exercise history:</p>
+        <p class="text-left"> Your Exercise history:</p>
         {% if exercise_list %}
         {% for exercise, exercise_count in exercises.items %}
-        <p class="text-left">The user has done the exercise "{{exercise}}" {{exercise_count}} times</p>
+        <p class="text-left">You have done the exercise "{{exercise}}" {{exercise_count}} times</p>
         {% endfor %}
         {% else %}
         <p class="text-left"> No history yet</p>
         {% endif %}
-        <p class="text-left">{{profile.user}} has made {{progress_percentage}} % progress towards the next level</p>
-        <p class="text-left">{{profile.user}}'s level is {{level}}</p>
+        <p class="text-left"> You have made {{progress_percentage}} % progress towards the next level</p>
+        <p class="text-left">Your level is {{level}}</p>
         {% if level > 0 %}
         <p class="text-left">Bronze Trophy Earned <img src="{% static 'eg/images/bronze.png' %}" width="150" height="150"></p>
         {% endif %}
@@ -58,7 +58,7 @@
         <p class="text-left"> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
         {% endif %}
         {% endfor %}
-        <p><a href="/forum/"> go back to forums</a></p>
+        <p><a href="/"> go back to index</a></p>
     </ul>
 </blockquote>
 {% else %}
