--- a/eg/templates/exercise.html
+++ b/eg/templates/exercise.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 
-{% block title %}<h1 class="text-center" style = "font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: #fbfcfd">RECORD THE GRIND</h1> {%endblock%}
+{% block title %}<h1 style = "font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: #fbfcfd; font-size: 100px">JOIN THE GRIND</h1> {%endblock%}
 {% block content %}
 
 <div class="form-group">
