--- a/eg/templates/our-music-choice.html
+++ b/eg/templates/our-music-choice.html
@@ -1,8 +1,8 @@
 {%extends 'base.html'%}
 {% block content %}
 
-<h1 class="text-center">Our Music Choice: A Boogie Wit da Hoodie</h1>
-<h4 class="text-center">Listen to these hot artists and get inspired!</h4>
+<h1 style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:100px; color: #fbfcfd; text-align:center">LIFTING TYPE BEATS</h1>
+<h4 style="color: #fbfcfd; text-align:center">Listen to these hot artists and get inspired!</h4>
 
 {% if results %}
 <div class="container bg-dark p-2">
@@ -10,9 +10,9 @@
 
 <ul class="list-unstyled">
     <li class="media">
-    <img src="{{song.album.images.0.url}}" class="rounded-circle" style="max-width:10%;" alt="">
+    <img src="{{song.album.images.0.url}}" class="rounded-circle" style="max-width:10%; margin-right: 10px" alt="">
       <div class="media-body">
-        <h5 class="bg-warning text-dark">{{song.name}}</h5>
+        <h5 style ="background-color:orange;">{{song.name}}</h5>
         <div class="list-group-item"><a href='{{song.preview_url}}'><button type="button"
             class="btn btn-dark  mt-1">PLAY SONG</button></a></div>
       </div>
