--- a/eg/templates/base.html
+++ b/eg/templates/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 {% load bootstrap4 %}
 {% load socialaccount %}
+{% load static %}
+
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -8,28 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="eg/static/style.css">
+    <link rel="stylesheet" type="text/css" href="{%static 'css/style.css' %">
+
     <title>Exercise Gamification</title>
-  </head>
-  
-  <!-- <body>
-    <header style="display:flex; justify-content:space-between; align-items:center;padding:30px 10%">
-      <h1 style = "font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: #fbfcfd"><a href="#">GET BIG</a></h1>
-      <nav>
-        <ul class = "nav_links" style = "list-style: none">
-          <li style ="display: inline-block;font-family:sans-serif; font-weight:500; font-size:16px;color:#fbfcfd; text-decoration:none"><a href="{% url 'profile_view' user.id %}"style ="font-family:sans-serif; font-weight:500; font-size:16px;color:#fbfcfd; text-decoration:none">Profile</a></li>
-          <li style ="display: inline-block;font-family:sans-serif; font-weight:500; font-size:16px;color:#fbfcfd; text-decoration:none"><a href="/forum"style ="font-family:sans-serif; font-weight:500; font-size:16px;color:#fbfcfd; text-decoration:none">Forum</a></li>
-          <li style ="display: inline-block;font-family:sans-serif; font-weight:500; font-size:16px;color:#fbfcfd; text-decoration:none"><a href="/progress"style ="font-family:sans-serif; font-weight:500; font-size:16px;color:#fbfcfd; text-decoration:none">Progress</a></li>
-        </ul>
-      </nav>
-      <a class="button" href="/edit_settings"><button>Settings</button></a>
-    </header>
-  </body> -->
-
-
+    
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Get Big</a>
+    <a class="navbar-brand" style ="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" href="/">GET BIG</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,35 +26,33 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
         {% if user.is_authenticated%}
-        <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class=nav-item>
-            <a class="nav-link" href="/forum">Forum</a>
-          </li>
+          
+          <li class="nav-item"><a class="nav-link" href="/forum">FORUM</a></li>
+          <li class = "nav-item"><a class = "nav-link" href="/our-music-choice"> BANGERZ </a></li>
+
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Profile
-            </a>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">PROFILE</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/edit_settings">Edit Settings</a>
               {% if user.profile.id%}
+              <a class="dropdown-item" href="{% url 'profile_view' user.id %} ">View Profile Page</a>
               <a class="dropdown-item" href="{% url 'edit_profile_page' user.profile.id %} ">Edit Profile Page</a>
-              <a class="dropdown-item" href="{% url 'profile_view' user.id %} ">Show Profile Page</a>
               {%else%}
               <a class="dropdown-item" href="{% url 'create_profile_page'%} ">Create Profile</a>
-
               {%endif%}
             </div>
-
-            <li class = "nav-item">
-              <a class = "nav-link" href="/our-music-choice"> Fire Artist! </a>
-            </li>
           </li>
-        <li class = "nav-item">
-            <a class = "nav-link" href="/accounts/logout"> Logout </a>
-        </li>
-       
+        
+          <li class="nav-item dropdown">
+            <ul class="nav navbar-nav navbar-right">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">SETTINGS</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/edit_settings">Edit Settings</a>
+                <a class="dropdown-item" href="/accounts/logout">Logout</a>
+            </li>
+            </ul>
+            
+      </ul>
+  
         {%else%}
         <li class="nav-item active">
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
@@ -109,7 +95,7 @@
           {% block content %}
           {% endblock content %}
       </h1>
-    </div> -->
+    </div> 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
