--- a/eg/templates/edit_profile.html
+++ b/eg/templates/edit_profile.html
@@ -2,16 +2,15 @@
 {%block titile %} Edit Settings {% endblock %}
 {% block content %}
 
-<h1> Edit User Settings...</h1>
-<br/><br>
+<h1 style="color:#fbfcfd; font-size:100px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif"> Edit User Settings</h1>
 
-<div class = "form-group">
+<div class = "form-group" style = "color: #fbfcfd">
     <form method = "POST">
         {% csrf_token %}
         {{ form.as_p}}
         <button class = "btn btn-secondary"> Update Settings</button>
-    
 </div>
+
 
 
 {% endblock %}
