--- a/eg/templates/edit_profile_page.html
+++ b/eg/templates/edit_profile_page.html
@@ -6,10 +6,9 @@
 
 {%if user.id == profile.user.id%}
 
-    <h1> Edit Profile...</h1>
-    <br/><br>
+    <h1 style="color:#fbfcfd; font-size:100px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Edit Your Profile</h1>
 
-    <div class = "form-group">
+    <div class = "form-group" style="color: #fbfbfb; font-size:medium">
         <form method = "POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
@@ -26,7 +25,7 @@
 
 {%else%}
 
-You are not a authenticated user
+You are not an authenticated user
 
 {%endif%}
 
