--- a/eg/templates/view_profile.html
+++ b/eg/templates/view_profile.html
@@ -7,41 +7,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 {% load static %}
 
+
 <blockquote class="blockquote text-center">
     {% if profile_info %}
+    <h1 style="margin-bottom: 25px;margin-left: 36px; font-size: 100px; color: #fbfcfd; text-align:center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif">Your Current Level: {{level}}</h1>
     <ul>
         {% for profile in profile_info %}
         <div class="container">
-          <div class="text-center py-5">
             {%if user.profile.profile_pic.url%}
               <img class="card-img-top" src="{{request.user.profile.profile_pic.url}}" alt="" style="width:300px;height:300px;" class="ui-w-100 rounded-circle">
             {%else%}
             <img class="card-img-top" src="{% static '/exgame/images/default_image.png' %}" style="width:300px;height:300px;" class = "rounded-circle" alt="Card image cap">
             {%endif%}
-            
-          
-              <h5>{{user.profile.bio}}</h5>
-              <div class="text-center">
-                <a class="d-inline-block text-white">
-                  Joined {{user.date_joined}}
-                </a>
-              </div>
-            </div>
-          </div>
+
+            <p style="color:#fbfcfd; margin: 15px 15px">Joined {{user.date_joined}}</p>
+            <h5 style="margin: 15px 15px; color: #fbfcfd; ">{{user.profile.bio}}</h5>
         </div>
-<div class = "container">
-  <p class="text-left">Progress:</p>
+
+<div class = "container" style = "color:#fbfcfd">
+  <p class="text-left" style = "font-size:40px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; margin-bottom:-0.20rem">PROGRESS:</p>
+  <p class="text-left" style ="font-style:italic">You have made {{progress_percentage}} % progress towards the next level</p>
+ 
   <p class="text-left"><img src="{% static 'eg/images/blue-box.jpg' %}" width="{{progress}}" height="100"></p>
-  <p class="text-left"> User Exercise history:</p>
-  {% if exercise_list %}
-  {% for exercise, exercise_count in exercises.items %}
-  <p class="text-left">The user has done the exercise "{{exercise}}" {{exercise_count}} times</p>
-  {% endfor %}
-  {% else %}
-  <p class="text-left"> No history yet</p>
-  {% endif %}
-  <p class="text-left">{{profile.user}} has made {{progress_percentage}} % progress towards the next level</p>
-  <p class="text-left">{{profile.user}}'s level is {{level}}</p>
+
+ 
+  <p class="text-left" style="font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size:40px">TROPHIES EARNED:</p>
   {% if level > 0 %}
   <p class="text-left">Bronze Trophy Earned <img src="{% static 'eg/images/bronze.png' %}" width="150" height="150"></p>
   {% endif %}
@@ -52,10 +42,17 @@
   <p class="text-left"> Gold Trophy Earned <img src="{% static 'eg/images/gold.png' %}" width="150" height="150"></p>
   {% endif %}
   {% endfor %}
-  <p><a href="/forum/"> go back to forums</a></p>
+  <p class="text-left" style = "font-size:40px; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">Exercise History:</p>
+  {% if exercise_list %}
+  {% for exercise, exercise_count in exercises.items %}
+  <p class="text-left">The user has done the exercise "{{exercise}}" {{exercise_count}} times</p>
+  {% endfor %}
+  {% else %}
+  <p class="text-left"> No history yet</p>
+  {% endif %}
 </div>
         
-    </ul>
+</ul>
 </blockquote>
 {% else %}
 <p>No such profile exists</p>
